# Messenger

./: .gitignore  README.md
Messenger/: CMakeLists.txt  main.cpp  uml.qmodel
Messenger/fails_menu/: fails_menu.cpp  fails_menu.h
Messenger/find_users_menu/: find_users_menu.cpp  find_users_menu.h
Messenger/logger/: logger.cpp  logger.h
Messenger/login_menu/: login_menu.cpp  login_menu.h
Messenger/messenger_main_menu/: messenger_main_menu.cpp  messenger_main_menu.h
Messenger/registration_menu/: registration_menu.cpp  registration_menu.h
Messenger/resources/: messenger_structure.qmodel
Messenger/sql_engine/: sql_engine.cpp  sql_engine.h
Messenger/widget_manager/: widget_manager.cpp  widget_manager.h
Server/: CMakeLists.txt  main.cpp
Server/logger/: logger.cpp  logger.h
Server/main_server/: main_server.cpp  main_server.h
Server/resources/: server_structure.qmodel
Server/sql_engine/: sql_engine.cpp  sql_engine.h
Server/sql_engine/sql_threads/: request_types.h
Server/sql_engine/sql_threads/messages_info_thread/: messages_info_thread.cpp  messages_info_thread.h
Server/sql_engine/sql_threads/user_info_thread/: user_info_thread.cpp  user_info_thread.h
Server/thread_sheduler/: thread_sheduler.cpp  thread_sheduler.h
